--- a/franklyn-frontend/src/app/components/new-test/new-test.component.html
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.html
@@ -100,8 +100,8 @@
             </div>
 
             <div class="container-fluid" *ngIf="showFourthCard == true">
-                <div class="card successful">
-                    <div class="card-body">
+                <div class="card">
+                    <div class="card-body successful">
                         <h5 class="card-title">Test wurde erfolgreich erstellt!</h5>
                         <br>
                         <h1>PIN: {{pinOfNewTest}}</h1>
