--- a/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
+++ b/franklyn-frontend/src/app/components/my-tests/my-tests.component.html
@@ -123,7 +123,7 @@
             
         </div>
         <div class="footer">
-            <h1>2022 Franklyn</h1>
+            <h1>{{currentYear}} Franklyn</h1>
         </div>
     </div>
 </div>
