--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="footer">
-            <h1>2022 Franklyn</h1>
+            <h1>{{currentYear}} Franklyn</h1>
         </div>
     </div>
 </div>
