add download for client

--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -51,7 +51,7 @@
 <!-- Header -->
 <header class="masthead bg-primary text-white text-center">
     <div class="about">
-        <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/logo.png" height="256" width="256">
+        <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/logo.png" height="256" width="256">
         <h1 class="text-uppercase mb-0">Franklyn</h1>
         <br>
         <h2 class="font-weight-light mb-0">Exam Support System</h2>
@@ -117,7 +117,7 @@
         <br>
         <div class="row">
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EverywhereAvailable.png" height="120"
+                <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/EverywhereAvailable.png" height="120"
                      width="120">
                 <h3 class="header-sm" style="color: #00a896">Überall verfügbar</h3>
                 <p class="lead">
@@ -125,14 +125,14 @@
                 </p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/DetailedAnalysis.png" height="120" width="120">
+                <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/DetailedAnalysis.png" height="120" width="120">
                 <h3 class="header-sm" style="color: #05668d">Analyse</h3>
                 <p class="lead">
                     Lehrkräfte können sich den Fortschritt ihrer Schüler live oder im Nachhinein ansehen
                 </p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-                <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/EqualOpportunities.png" height="120" width="120">
+                <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/EqualOpportunities.png" height="120" width="120">
                 <h3 class="header-sm" style="color: #02c39a">Chancengleichheit</h3>
                 <p class="lead">
                     Jeder bekommt gleichermaßen Zugang zu Informationen und Hilfsmitteln
@@ -147,7 +147,7 @@
         <h2 class="text-center text-uppercase text-white">Download</h2>
         <br>
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-download" href="./app/Franklyn%202.0.0.exe">
+            <a class="btn btn-xl btn-download" href="assets/franklyn3-client-0.1.0-SNAPSHOT.jar">
                 <i class="fab fa-windows mr-2"></i>Download
             </a>
         </div>
@@ -196,7 +196,7 @@
             </div>
         </div>
     </div>
-    <img class="img-fluid mb-5 d-block mx-auto" src="../../../assets/img/webuntisLogin.png" height="180" width="180">
+    <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/webuntisLogin.png" height="180" width="180">
 </section>
 
 <div class="copyright py-4 text-center text-white">
