--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -147,7 +147,7 @@
         <h2 class="text-center text-uppercase text-white">Download</h2>
         <br>
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-download" href="assets/franklyn3-client-0.1.0-SNAPSHOT.jar">
+            <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
                 <i class="fab fa-windows mr-2"></i>Download
             </a>
         </div>
