--- a/franklyn-frontend/src/app/components/new-test/new-test.component.html
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.html
@@ -1,3 +1,12 @@
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Franklyn</title>
+</head>
+
 <app-sidebar></app-sidebar>
 
 <div class="row large">
@@ -61,22 +70,6 @@
                     </form>
                 </div>
             </div>
-        
-<!--             <div class="container-fluid" *ngIf="showSecondCard == true">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Start- und Endzeit festlegen</h5>
-                        <br>
-                        <label class="form-label">Startzeit</label>
-                        <input [(ngModel)]="tempStartTime" class="form-control" type="time">
-                        <br>
-                        <label class="form-label">Endzeit</label>
-                        <input [(ngModel)]="tempEndTime" class="form-control" type="time">
-                        <button class="btn btn-secondary btn-back inline" (click)="secondCardBack()">Zurück</button>
-                        <button (click)="secondCardSubmit()" class="btn btn-forward inline">Weiter</button>
-                    </div>
-                </div>
-            </div> -->
         
             <div class="container-fluid" *ngIf="showThirdCard == true">
                 <div class="card">
