--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Franklyn</title>
+</head>
+
 <app-sidebar></app-sidebar>
 <div class="row large">
     <div class="col-9">
