--- a/franklyn-frontend/src/app/components/sidebar/sidebar.component.css
+++ b/franklyn-frontend/src/app/components/sidebar/sidebar.component.css
@@ -6,9 +6,6 @@
     left: 0;
     bottom: 0;
     width: 300px;
-    transform: translateX(-100%);
-    transition: ease-in-out 300ms transform;
-    width: 300px;
     float: left;
 }
 
@@ -51,6 +48,7 @@
     margin-bottom: 20px;
     /* background-color: #02c39a; */
     font-size: 18px;
+    margin-top: 100%;
 }
 
 .sidebar-btn:hover{
@@ -59,5 +57,10 @@
 }
 
 .btn{
-    width: 220px;
+    width: 70%;
+}
+
+h1{
+    font-weight: 400;
+    font-size: 25px;
 }
