--- a/franklyn-frontend/src/app/components/sidebar/sidebar.component.html
+++ b/franklyn-frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div class="sidebar-slider"></div>
 	  <div class="sidebar-content">
         <h1>FRANKLYN</h1>
-        <div class="btn btn-secondary sidebar-text" (click)="ShowDashboard()">Dashboard</div>
-        <div class="btn btn-secondary sidebar-text" (click)="ShowMyTests()">Meine Tests</div>
-        <div class="btn btn-secondary sidebar-text" (click)="ShowScreenshots()">Screenshots</div>
-        <div class="btn btn-secondary sidebar-text" (click)="ShowExplanation()">Anleitung</div>
+        <div class="btn btn-success sidebar-text" (click)="ShowDashboard()">Dashboard</div>
+        <div class="btn btn-success sidebar-text" (click)="ShowMyTests()">Meine Tests</div>
+        <div class="btn btn-success sidebar-text" (click)="ShowScreenshots()">Screenshots</div>
+        <div class="btn btn-success sidebar-text" (click)="ShowExplanation()">Anleitung</div>
         <div class="btn btn-primary sidebar-btn" (click)="newTest()">
             Neuen Test erstellen
         </div>
