fra-116 adding icons

--- a/franklyn-frontend/src/app/components/howto/howto.component.html
+++ b/franklyn-frontend/src/app/components/howto/howto.component.html
@@ -7,7 +7,7 @@
                 <div class="nav-header">
                     <h1 class="header-nav">Anleitung</h1>
                     <div class="logout">
-                        <button class="btn btn-danger" (click)="logout()">Abmelden</button>
+                        <button class="btn btn-danger" (click)="logout()"><i class="bi bi-door-open"></i>&nbsp;&nbsp;&nbsp;Abmelden</button>
                     </div>
                 </div>
             </div>
