--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<header>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+</header>
+
 
 <head>
     <meta charset="utf-8">
@@ -7,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Franklyn3</title>
+    <title>Franklyn</title>
 </head>
 
 <body id="page-top">
@@ -26,7 +30,7 @@
                      style="border-radius: 50%; display: inline-block; background: red; padding: 20px;"></div>
             </div>
         </div> -->
-        <a class="navbar-brand js-scroll-trigger" (click)="goToTop()">Franklyn3</a>
+        <a class="navbar-brand js-scroll-trigger" (click)="goToTop()">Franklyn</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -52,61 +56,11 @@
 <header class="masthead bg-primary text-white text-center">
     <div class="about">
         <img class="img-fluid mb-5 d-block mx-auto" src="assets/img/logo.png" height="256" width="256">
-        <h1 class="text-uppercase mb-0">Franklyn3</h1>
+        <h1 class="text-uppercase mb-0">Franklyn</h1>
         <br>
         <h2 class="font-weight-light mb-0">Exam Support System</h2>
         <br><br>
     </div>
-    <!-- <div class="container">
-        <div class="row">
-            <div id="fr1-card" class="card col-3 ml-auto mr-1">
-                <div class="card-body mx-auto">
-                    <table class="text-dark">
-                        <tr>
-                            <td class="p-1" class="mr-1" style="font-size: 20px"><b>Server</b></td>
-                            <td style="font-size: 20px"><b>Franklyn</b></td>
-                        </tr>
-                        <tr>
-                            <td class="p-1" style="font-size: 20px">Status</td>
-                            <td id="frStatus" style="font-size: 20px"></td>
-                        </tr>
-                        <tr>
-                            <td class="pr-4" style="font-size: 20px">Webseite</td>
-                            <td style="font-size: 20px"><a href="https://franklyn.htl-leonding.ac.at" target="_blank">Franklyn</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="pr-4" style="font-size: 20px">Laufende Tests</td>
-                            <td id="fr1-tests" style="font-size: 20px"></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div id="fr2-card" class="card col-3 mr-auto">
-                <div class="card-body mx-auto">
-                    <table class="text-dark">
-                        <tr>
-                            <td class="p-1" class="mr-1" style="font-size: 20px"><b>Server</b></td>
-                            <td style="font-size: 20px"><b>Franklyn2</b></td>
-                        </tr>
-                        <tr>
-                            <td class="p-1" style="font-size: 20px">Status</td>
-                            <td id="fr2Status" style="font-size: 20px"></td>
-                        </tr>
-                        <tr>
-                            <td class="pr-4" style="font-size: 20px">Webseite</td>
-                            <td style="font-size: 20px"><a href="https://franklyn2.htl-leonding.ac.at" target="_blank">Franklyn2</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="pr-4" style="font-size: 20px">Laufende Tests</td>
-                            <td id="fr2-tests" style="font-size: 20px"></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div> -->
 </header>
 <!-- About Section -->
 <section id="about">
@@ -147,19 +101,19 @@
         <h2 class="text-center text-uppercase text-white">Download</h2>
         <br>
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-download" href="assets/franklyn3-client.zip">
-                <i class="fab fa-windows mr-2"></i>Download
+            <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
+              <i class="bi bi-ubuntu"></i>&nbsp;&nbsp;&nbsp;Linux
             </a>
+          <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
+            <i class="bi bi-apple"></i>&nbsp;&nbsp;&nbsp;MacOS
+          </a>
+          <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
+            <i class="bi bi-windows"></i>&nbsp;&nbsp;&nbsp;Windows
+          </a>
+          <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
+            <i class="bi bi-filetype-java"></i>&nbsp;&nbsp;&nbsp;.jar
+          </a>
         </div>
-
-        <!-- <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light btn-disabled" href="./app/Franklyn%202.0.0.exe">
-                <i class="fab fa-windows mr-2"></i>&nbsp;Download für Windows
-            </a>
-            <a class="btn btn-xl btn-outline-light" href="./app/Franklyn%202.0.0.zip">
-                <i class="fab fa-linux mr-2"></i>&nbsp;Download für Linux
-            </a>
-        </div> -->
     </div>
 </section>
 <!-- Login Section -->
