--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.css
@@ -1,23 +1,23 @@
 .text-used, .text-used:hover {
     color: #0C242C;
   }
-  
+
   .text-available, .text-available:hover {
     color: #02c39a;
   }
-  
+
   .ct-series-a .ct-slice-pie {
     fill: #02c39a !important;
   }
-  
+
   .ct-series-b .ct-slice-pie {
     fill: #0C242C !important;
   }
-  
+
   .ct-slice-pie {
     margin: 0 !important;
   }
-  
+
   .chartCard .footer {
     clear: none !important;
   }
@@ -48,6 +48,7 @@
   text-align: right;
   margin-top: -10px;
   font-size: 30px;
+  float: right;
 }
 
 .subheader{
@@ -136,4 +137,20 @@
   display: inline-block;
   padding: 20px;
 }
-  
+
+.svg{
+  margin-left: 100px;
+  text-align: left;
+  margin-top: -30px;
+  font-size: 50px;
+  float: left;
+  color: green;
+}
+
+.dashboardsvg{
+  display: inline-block;
+}
+
+.svg-small{
+  font-size: 25px;
+}
