--- a/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/franklyn-frontend/src/app/components/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
                 <div class="nav-header">
                     <h1 class="header-nav">Dashboard</h1>
                     <div class="logout">
-                        <button class="btn btn-danger" (click)="logout()">Abmelden</button>
+                        <button class="btn btn-danger" (click)="logout()"><i class="bi bi-door-open"></i>&nbsp;&nbsp;&nbsp;Abmelden</button>
                     </div>
                 </div>
             </div>
@@ -24,23 +24,30 @@
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">Titel</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-card-text svg"></i>
                                 <h1 class="text">{{exam.title}}</h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">Klassen</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-mortarboard svg"></i>
                                 <h1 class="text">
                                     <span class="txt"  *ngIf="exam.forms.length == 0">
                                         -
                                     </span>
-                                    <span class="txt"  *ngFor="let form of exam.forms; let f = first; let l = last">
+                                  <span class="txt"  *ngFor="let form of exam.forms; let f = first; let l = last">
                                         {{form}}
-                                        <span *ngIf="!(f && l) && !l"> ,</span>
+                                    <span *ngIf="!(f && l) && !l"> ,</span>
                                     </span>
                                 </h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                     </div>
@@ -48,15 +55,21 @@
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">PIN</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-lock svg"></i>
                                 <h1 class="text">{{exam.pin}}</h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">Eingeschriebene Schüler</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-people svg"></i>
                                 <h1 class="text">{{exam.nrOfStudents}}</h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                     </div>
@@ -64,15 +77,21 @@
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">Datum</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-calendar-date svg"></i>
                                 <h1 class="text">{{exam.date | date: 'dd.MM.yyyy'}}</h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="card inner">
                                 <h3 class="subheader">Zeit</h3>
+                              <div class="dashboardsvg">
+                                <i class="bi bi-clock svg"></i>
                                 <h1 class="text">{{exam.startTime | date: 'HH:MM'}}</h1>
-                                <div class="card-footer">Jetzt aktualisiert</div>
+                              </div>
+                                <div class="card-footer"><i class="bi bi-arrow-repeat svg-small"></i>&nbsp;&nbsp;&nbsp;Jetzt aktualisiert</div>
                             </div>
                         </div>
                     </div>
