--- a/franklyn-frontend/src/app/components/start/start.component.html
+++ b/franklyn-frontend/src/app/components/start/start.component.html
@@ -110,7 +110,7 @@
           <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
             <i class="bi bi-windows"></i>&nbsp;&nbsp;&nbsp;Windows
           </a>
-          <a class="btn btn-xl btn-download" href="assets/franklyn3-client.jar">
+          <a class="btn btn-xl btn-download" href="assets/franklyn3-client.zip">
             <i class="bi bi-filetype-java"></i>&nbsp;&nbsp;&nbsp;.jar
           </a>
         </div>
