--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -36,7 +36,7 @@
                                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img class="d-block" src="{{currentScreenshot.image}}" (click)="showFullScreen(0)" alt="Screenshot">
+                                            <img class="d-block" [src]="currentImage" (click)="showFullScreen(0)" alt="Screenshot">
                                           </div>
                                         </div>
                                         <a class="carousel-control-prev" (click)="goToPrevious()" role="button" data-slide="prev">
