--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -7,6 +7,16 @@
     <title>Franklyn</title>
 </head>
 
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <img  src="{{currentScreenshot.image}}" alt="Screenshot">
+  </div>
+</ng-template>
+
 <app-sidebar></app-sidebar>
 
 <div class="row large">
@@ -36,7 +46,7 @@
                                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                           <div class="carousel-item active">
-                                            <img class="d-block" src="{{currentScreenshot.image}}" (click)="showFullScreen(0)" alt="Screenshot">
+                                            <img class="d-block" src="{{currentScreenshot.image}}" (click)="openFullscreen(content)" alt="Screenshot">
                                           </div>
                                         </div>
                                         <a class="carousel-control-prev" (click)="goToPrevious()" role="button" data-slide="prev">
@@ -47,14 +57,14 @@
                                         </a>
                                       </div>
                                  </div>
-                                 <div>
+<!--                                 <div>
                                     <ng-image-fullscreen-view
                                     [images]="screenshots"
                                     [imageIndex]="currentIndexFS"
                                     [show]="showImgFullScreen"
                                     (close)="closeEventHandler()">
                                     </ng-image-fullscreen-view>
-                                 </div>
+                                 </div>-->
                             </div>
                             <div *ngIf="this.hasScreenshots == false" class="col-8 slideshow">
                                 <h2>Keine Screenshots verfügbar!</h2>
@@ -83,13 +93,20 @@
                                                             <circle cx="8" cy="8" r="8"/>
                                                         </svg>
                                                         &nbsp;&nbsp;{{examinee.firstName}} {{examinee.lastName}}
+                                                      <button class="btn btn-info"  (click)="downloadVideo(examinee.id)")>
+                                                        <i class="bi bi-arrow-down-circle"></i>
+                                                      </button>
                                                     </div>
-                                                    <div *ngIf="!examinee.isOnline">
+                                                    <div *ngIf="!examinee.isOnline" class="students">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#dc0000" class="bi bi-circle-fill" viewBox="0 0 16 16">
                                                             <circle cx="8" cy="8" r="8"/>
                                                         </svg>
                                                         &nbsp;&nbsp;{{examinee.firstName}} {{examinee.lastName}}
+                                                        <button class="btn btn-secondary download">
+                                                          <i class="bi bi-arrow-down-circle"></i>
+                                                        </button>
                                                     </div>
+
                                                 </dt>
                                               </ng-container>
                                             </dl>
@@ -111,3 +128,4 @@
         </div>
     </div>
 </div>
+
